# Sports_Prediction

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  logic.py  main.py  plan.md  pyproject.toml
backend/data/: proline_04_15_2026.json  proline_detailed_04_14_2026.json
backend/src/: main.py
backend/src/helpers/: file_helpers.py  logger.py  pandas_helpers.py  performance_helpers.py  sports_helpers.py  string_helpers.py  utility_helpers.py  yaml_helpers.py
backend/src/models/: prediction_response.py
backend/src/parsers/: HockeyReferenceConverter.py  HockeyReferenceParser.py  MappingService.py  QuantConverter.py  QuantHockeyParser.py
backend/src/routers/: prediction_routes.py
backend/tests/: test_api.py
backend/tests/features/: test_quant_feature_pipeline.py
backend/tests/fixtures/: 2025-26PittsburghPenguins Schedule _ Hockey-Reference.html  QuantHockey_1776924160.xlsx  Quant_Hockey_PittsburghPenguinsGameLog2025‑2026.html  hockey_reference_full_season_2026.csv  hockey_reference_pittsburgh_pens_2026.csv
backend/tests/fixtures/2025-26PittsburghPenguins Schedule _ Hockey-Reference_files/: 20503178_002.js  a.html  a_002.html  a_003.html  osano.js  sr-min.css  sr-min.js  web-interactives-embed.js
backend/tests/mappings/: test_hockey_adapters.py  test_mapping_service.py
backend/tests/parsers/: test_quant_parser.py  test_quant_parser_real_data.py  test_reference_parser.py  test_reference_parser_real_data.py
backend/tests/preprocessing/: test_quant_preprocessing_pipeline.py
(+209 files in other folders)
