[project]
name = "sports-prediction-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "mypy>=1.20.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]
