[project]
name = "sports-prediction-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "mypy>=1.20.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pandas-stubs>=3.0.0.260204",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20260408",
]
